@@ -1,4 +1,4 @@
-<window id="1">
+<window id="35">
 	<defaultcontrol always="true">50</defaultcontrol>
 	<allowoverlay>no</allowoverlay>
 	<views>50,51,500</views>
