@@ -281,7 +281,7 @@
 					<posx>750</posx>
 					<posy>410</posy>
 					<width>700</width>
-					<label>xbs' Confluence XBOX V1.05 (Jul 2010)</label>
+					<label>xbs' Confluence XBOX V1.06 (Ago 2010)</label>
 					<align>right</align>
 					<textcolor>blue</textcolor>
 					<shadowcolor>black</shadowcolor>
